Extracted both environment forms in a single directive

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <!-- Environments -->
     <script src="js/environments/environment-controller.js"></script>
     <script src="js/environments/environment-service.js"></script>
+    <script src="js/environments/environment-form.js"></script>
 
 </head>
 <body>
