Fixed the display position of the rightmost elements in the navbar

--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,14 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-default">
-        <a class="navbar-brand" href="#">Springbok</a>
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="#/tickets/new">New Ticket</a></li>
-            <li><a href="#/environments">Environments</a></li>
-        </ul>
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Springbok</a>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#/tickets/new">New Ticket</a></li>
+                <li><a href="#/environments">Environments</a></li>
+            </ul>
+        </div>
     </nav>
 
     <div ng-view></div>
