New layout for the active tickets page

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <!-- Tickets -->
     <script src="js/tickets/ticket-controller.js"></script>
     <script src="js/tickets/ticket-service.js"></script>
+    <script src="js/tickets/ticket-filters.js"></script>
 
     <!-- Environments -->
     <script src="js/environments/environment-controller.js"></script>
@@ -36,7 +37,7 @@
         </div>
     </nav>
 
-    <div ng-view></div>
+    <main ng-view></main>
 
 </body>
 </html>
