Now using two pages for the ticket edit and creation process to gain flexibility

--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,11 @@
 
     <!-- Tickets -->
     <script src="js/tickets/all-tickets-controller.js"></script>
+    <script src="js/tickets/new-ticket-controller.js"></script>
     <script src="js/tickets/single-ticket-controller.js"></script>
     <script src="js/tickets/ticket-service.js"></script>
     <script src="js/tickets/ticket-filters.js"></script>
+    <script src="js/tickets/ticket-form.js"></script>
 
     <!-- Environments -->
     <script src="js/environments/environment-controller.js"></script>
