--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
     <script src="js/tickets/ticket-filters.js"></script>
     <script src="js/tickets/ticket-form.js"></script>
 
+    <!-- Events -->
+    <script src="js/events/event-service.js"></script>
+
     <!-- Environments -->
     <script src="js/environments/environment-controller.js"></script>
     <script src="js/environments/environment-service.js"></script>
