--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/springbok.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-route.min.js"></script>
@@ -29,6 +30,9 @@
     <script src="js/environments/environment-controller.js"></script>
     <script src="js/environments/environment-service.js"></script>
     <script src="js/environments/environment-form.js"></script>
+
+    <!-- Alternative UI -->
+    <script src="js/tickets/alt/create-controller.js"></script>
 
 </head>
 <body>
