--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/springbok.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-route.min.js"></script>
@@ -33,7 +34,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-default" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Springbok</a>
             <ul class="nav navbar-nav navbar-right">
@@ -44,6 +45,17 @@
     </nav>
 
     <main ng-view></main>
+
+    <footer class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container-fluid">
+            <p class="navbar-text navbar-right">
+                Source code available on
+                <a href="https://github.com/charlescaron/springbok" class="navbar-link">
+                    <img src="./img/github.png" width="5%" height="5%"/>
+                </a>
+            </p>
+        </div>
+    </footer>
 
 </body>
 </html>
