Add control on brands and problems models + Improve UI Change-Id: I7cd86bfb358b1cb96336b4a188b7be8653080c09

--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,20 @@
     <!-- Events -->
     <script src="js/events/event-service.js"></script>
 
+    <!-- Brands -->
+    <script src="js/brands/brand-service.js"></script>
+
+    <!-- Problems -->
+    <script src="js/problems/problem-service.js"></script>
+
     <!-- Environments -->
     <script src="js/environments/environment-controller.js"></script>
     <script src="js/environments/environment-service.js"></script>
     <script src="js/environments/environment-form.js"></script>
+
+
+    <!-- Alternative UI -->
+    <script src="js/tickets/alt/create-controller.js"></script>
 
 </head>
 <body>
