--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,20 @@
     <script src="js/tickets/ticket-filters.js"></script>
     <script src="js/tickets/ticket-form.js"></script>
 
+    <!-- Brands -->
+    <script src="js/brands/brand-service.js"></script>
+
+    <!-- Problems -->
+    <script src="js/problems/problem-service.js"></script>
+
     <!-- Environments -->
     <script src="js/environments/environment-controller.js"></script>
     <script src="js/environments/environment-service.js"></script>
     <script src="js/environments/environment-form.js"></script>
+
+
+    <!-- Alternative UI -->
+    <script src="js/tickets/alt/create-controller.js"></script>
 
 </head>
 <body>
