--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.0/yeti/bootstrap.min.css">
     <link rel="stylesheet" href="./css/springbok.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js"></script>
@@ -37,7 +37,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar-inverse navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Springbok</a>
             <ul class="nav navbar-nav navbar-right">
