--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <title>Springbok, the lightweight issue manager</title>
 
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.0/yeti/bootstrap.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.4/yeti/bootstrap.min.css">
     <link rel="stylesheet" href="./css/springbok.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-route.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-resource.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.min.js"></script>
 
     <script src="js/springbok.js"></script>
 
@@ -39,7 +39,7 @@
 
     <nav class="navbar-inverse navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Springbok</a>
+            <a class="navbar-brand" href="#/">Springbok</a>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#/tickets/new">New Ticket</a></li>
                 <li><a href="#/environments">Environments</a></li>
