Replaced the concept of 'Brand' by the concept of 'Client'
It's the same thing but it's more generic.

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
     <script src="js/tickets/ticket-form.js"></script>
     <script src="js/tickets/search-controller.js"></script>
 
-    <!-- Brands -->
-    <script src="js/brands/brand-service.js"></script>
+    <!-- Clients -->
+    <script src="js/clients/client-service.js"></script>
 
     <!-- Problems -->
     <script src="js/problems/problem-service.js"></script>
