--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 
         <div class="container-fluid">
-            <a class="navbar-brand" href="#/">Springbok</a>
+            <a class="navbar-brand" href="#/">Springbok<sub>v0.4</sub></a>
             <div class="navbar-collapse collapse">
 
                 <ul class="nav navbar-nav navbar-right">
