Added a client management form

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
 
     <!-- Clients -->
     <script src="js/clients/client-service.js"></script>
+    <script src="js/clients/client-controller.js"></script>
+    <script src="js/clients/client-form.js"></script>
 
     <!-- Problems -->
     <script src="js/problems/problem-service.js"></script>
@@ -42,11 +44,12 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 
         <div class="container-fluid">
-            <a class="navbar-brand" href="#/">Springbok<sub>v0.4</sub></a>
+            <a class="navbar-brand" href="#/">Springbok<sub>v0.3</sub></a>
             <div class="navbar-collapse collapse">
 
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#/tickets/new">New Ticket</a></li>
+                    <li><a href="#/clients">Clients</a></li>
                     <li><a href="#/environments">Environments</a></li>
                 </ul>
 
