--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/springbok.css">
 
+    <!-- Core Angular libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.0/ui-bootstrap-tpls.min.js"></script>
+
+    <!-- Charting libraries -->
+    <script src="components/d3-3.5.5.min.js"></script>
+    <script src="components/pie-chart-1.0.0.min.js"></script>
 
     <script src="js/springbok.js"></script>
 
@@ -38,6 +43,9 @@
     <script src="js/environments/environment-service.js"></script>
     <script src="js/environments/environment-form.js"></script>
 
+    <!-- Reports -->
+    <script src="js/reports/report-controller.js"></script>
+
 </head>
 <body>
 
@@ -51,6 +59,7 @@
                     <li><a href="#/tickets/new">New Ticket</a></li>
                     <li><a href="#/clients">Clients</a></li>
                     <li><a href="#/environments">Environments</a></li>
+                    <li><a href="#/reports">Reports</a></li>
                 </ul>
 
                 <form class="navbar-form" ng-controller="searchController">
